feat: loading component first try

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,12 @@
-<main class="text-white flex flex-col justify-center md:px-56">
-  @if (showMenu == true) {
-    <app-menu></app-menu>
-  }
+<!-- <main class="text-white flex flex-col justify-center md:px-56"> -->
+@if (showMenu == true) {
+  <app-menu></app-menu>
+}
+<div [ngStyle]="{ display: isLoading ? 'block' : 'none' }">
+  <loading-component></loading-component>
+</div>
+<div [ngStyle]="{ display: !isLoading ? 'block' : 'none' }">
   <router-outlet></router-outlet>
-</main>
+</div>
+
+<!-- </main> -->
