--- a/src/app/discover/carousel/carousel.component.html
+++ b/src/app/discover/carousel/carousel.component.html
@@ -1,4 +1,7 @@
-<div class="lg:flex gap-5 carousel w-full h-full justify-center" id="carousel">
+<div
+  class="lg:flex gap-5 carousel w-full h-full justify-center p-4"
+  id="carousel"
+>
   <a class="picture" [routerLink]="['/game', highlightedGame?.name]">
     <img
       class="rounded h-full w-full object-cover"
@@ -7,7 +10,7 @@
     />
   </a>
 
-  <div class="h-full flex flex-col justify-between gap-2 text-lg">
+  <div class="h-full flex flex-col justify-between gap-2 text-lg roulette">
     @for (game of games; track $index) {
       <div
         class="flex items-center gap-2 h-1/5 rounded"
