--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,56 +1,62 @@
 @if (listedGame) {
-  <h1 class="text-4xl w-full py-2">{{ namedGame?.name }}</h1>
-  <div class="lg:flex w-full h-full lg:justify-between gap-8">
-    <img
-      class="rounded w-3/4 object-cover"
-      src="{{ namedGame?.horizontalsrc }}"
-      alt=""
-    />
-    <div class="flex flex-col justify-end items-center w-1/4 gap-4 relative">
-      <div class="flex flex-col gap-3 w-full">
-        <span class="flex justify-between w-full">
-          <span class="text-gray-300"> Title: </span>
-          <span class=""> {{ namedGame?.name }}</span></span
+  <main class="flex justify-center">
+    <div id="game">
+      <h1 class="text-4xl w-full py-2">{{ namedGame?.name }}</h1>
+      <div class="lg:flex lg:justify-between gap-8">
+        <img
+          class="rounded w-3/4 object-cover"
+          src="{{ namedGame?.horizontalsrc }}"
+          alt=""
+        />
+        <div
+          class="flex flex-col justify-end items-center w-1/4 gap-4 relative"
         >
-        <span class="flex justify-between w-full">
-          <span class="text-gray-300"> Release Date: </span>
-          <span class=""> {{ namedGame?.releaseDate }}</span></span
-        >
-        <span class="flex justify-between w-full">
-          <span class="text-gray-300"> Genre: </span>
-          <span class=""> {{ namedGame?.genre }}</span></span
-        >
-        <span class="flex justify-between w-full">
-          <span class="text-gray-300"> Publisher: </span>
-          <span>{{ namedGame?.publisher }}</span></span
-        >
-        <span class="flex justify-between w-full">
-          <span class="text-gray-300"> Developer: </span>
-          <span class="">{{ namedGame?.developer }}</span></span
-        >
-      </div>
-      <div class="flex gap-2 flex-col justify-end w-full">
-        <span class="w-full">Price: $199 </span>
+          <div class="flex flex-col gap-3 w-full">
+            <span class="flex justify-between w-full">
+              <span class="text-gray-300"> Title: </span>
+              <span class=""> {{ namedGame?.name }}</span></span
+            >
+            <span class="flex justify-between w-full">
+              <span class="text-gray-300"> Release Date: </span>
+              <span class=""> {{ namedGame?.releaseDate }}</span></span
+            >
+            <span class="flex justify-between w-full">
+              <span class="text-gray-300"> Genre: </span>
+              <span class=""> {{ namedGame?.genre }}</span></span
+            >
+            <span class="flex justify-between w-full">
+              <span class="text-gray-300"> Publisher: </span>
+              <span>{{ namedGame?.publisher }}</span></span
+            >
+            <span class="flex justify-between w-full">
+              <span class="text-gray-300"> Developer: </span>
+              <span class="">{{ namedGame?.developer }}</span></span
+            >
+          </div>
+          <div class="flex gap-2 flex-col justify-end w-full">
+            <span class="w-full">Price: $199 </span>
 
-        <button
-          [routerLink]="['pay']"
-          class="w-full h-12 bg-blue-500 rounded text-white text-lg"
-        >
-          Buy Now
-        </button>
-        <button class="w-full h-12 rounded bg-gray-900 border border-white">
-          Add to Wishlist
-        </button>
+            <button
+              [routerLink]="['pay']"
+              class="w-full h-12 bg-blue-500 rounded text-white text-lg"
+            >
+              Buy Now
+            </button>
+            <button class="w-full h-12 rounded bg-gray-900 border border-white">
+              Add to Wishlist
+            </button>
+          </div>
+        </div>
       </div>
+      <p class="py-6">
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ratione,
+        eveniet vel quos dolor, consectetur alias blanditiis soluta deserunt
+        culpa, illum veritatis ea laboriosam. Accusamus enim repellendus
+        blanditiis reiciendis consequuntur saepe. Lorem ipsum dolor sit amet
+        consectetur adipisicing elit. Quaerat repellat maxime deleniti quod!
+        Ratione iste quia exercitationem modi architecto eveniet culpa excepturi
+        iusto odit itaque? Quod animi illo doloremque adipisci!
+      </p>
     </div>
-  </div>
-  <p class="py-6">
-    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ratione, eveniet
-    vel quos dolor, consectetur alias blanditiis soluta deserunt culpa, illum
-    veritatis ea laboriosam. Accusamus enim repellendus blanditiis reiciendis
-    consequuntur saepe. Lorem ipsum dolor sit amet consectetur adipisicing elit.
-    Quaerat repellat maxime deleniti quod! Ratione iste quia exercitationem modi
-    architecto eveniet culpa excepturi iusto odit itaque? Quod animi illo
-    doloremque adipisci!
-  </p>
+  </main>
 }
