--- a/src/app/discover/carousel/carousel.component.html
+++ b/src/app/discover/carousel/carousel.component.html
@@ -1,16 +1,22 @@
-<div
-  class="lg:flex gap-5 carousel w-full h-full justify-center p-4"
-  id="carousel"
->
-  <a class="picture" [routerLink]="['/game', highlightedGame?.name]">
-    <img
-      class="rounded h-full w-full object-cover"
-      src="{{ highlightedGame?.horizontalsrc }}"
-      alt="image"
-    />
+<div class="gap-5 carousel w-full h-full mb-2 justify-center" id="carousel">
+  <a
+    class="picture h-full highLightedGame"
+    [routerLink]="['/game', highlightedGame?.name]"
+  >
+    <figure class="rounded h-full w-full">
+      <img
+        class="rounded-xl h-full w-full object-cover"
+        src="{{ highlightedGame?.horizontalsrc }}"
+        alt="image"
+      />
+      <figcaption class="caption">
+        {{ highlightedGame?.name }} <br />
+        ${{ highlightedGame?.price }}
+      </figcaption>
+    </figure>
   </a>
 
-  <div class="h-full flex flex-col justify-between gap-2 text-lg roulette">
+  <div class="flex flex-col gap-3 text-lg roulette">
     @for (game of games; track $index) {
       <div
         class="flex items-center gap-2 h-1/5 rounded"
@@ -18,11 +24,10 @@
         (click)="selectGame(game)"
       >
         <img
-          class="w-40 h-full rounded object-cover card"
+          class="rounded-xl object-cover card"
           src="{{ game.horizontalsrc }}"
           alt="image"
         />
-        <span class="w-52">{{ game.name }}</span>
       </div>
     }
   </div>
