--- a/src/app/discover/carousel/carousel.component.scss
+++ b/src/app/discover/carousel/carousel.component.scss
@@ -1,17 +1,49 @@
 .carousel {
-  min-height: 150px;
-  max-height: 500px;
-  .picture {
-    min-width: 250px;
-    max-width: 1000px;
-    min-height: 250px;
-    max-height: 500px;
-    height: 500px;
-    width: 1000px;
+  .highLightedGame {
+    .caption {
+      font-size: 20px;
+      position: relative;
+      bottom: 75px;
+      left: 55px;
+    }
   }
+  @media screen and (min-width: 1255px) {
+    min-height: 150px;
+    max-height: 500px;
+    display: flex;
+  }
+
+  .picture {
+    min-width: 300px;
+    max-width: 1250px;
+
+    width: 1150px;
+    @media screen and (min-width: 1255px) {
+      height: 500px;
+      min-height: 250px;
+      max-height: 500px;
+    }
+  }
+
   .roulette {
-    @media screen and (max-width: 768px) and (max-height: 1024px) {
+    padding-left: 10px;
+    height: 500px;
+
+    @media screen and (max-width: 1255px) and (max-height: 1024px) {
       display: none;
+    }
+    img {
+      width: 190px;
+      height: 90px;
+    }
+
+    span {
+      @media screen and (max-width: 1455px) {
+        font-size: 14px;
+      }
+      @media screen and (max-width: 1320px) {
+        font-size: 12px;
+      }
     }
   }
 }
