feat: major changes to mobile and mobile menu

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,5 @@
-<!-- <main class="text-white flex flex-col justify-center md:px-56"> -->
 @if (showMenu == true) {
   <app-menu></app-menu>
+  <mobile-menu></mobile-menu>
 }
 <router-outlet></router-outlet>
-
-<!-- </main> -->
