--- a/src/app/game/game-pay/pay-debit-form/pay-debit-form.component.html
+++ b/src/app/game/game-pay/pay-debit-form/pay-debit-form.component.html
@@ -1,5 +1,5 @@
 <form
-  class="flex flex-col gap-1 w-96"
+  class="flex flex-col gap-1"
   [formGroup]="debitForm"
   (ngSubmit)="onSubmitForm()"
 >
