--- a/src/app/discover/discover.component.scss
+++ b/src/app/discover/discover.component.scss
@@ -4,14 +4,22 @@
   justify-content: center;
   align-items: center;
 
+  &.hidden {
+    display: none;
+  }
+
   .category {
-    min-width: 650px;
+    min-width: 320px;
     max-width: 1400px;
-    width: 100%;
+    width: 90%;
     display: flex;
     justify-content: center;
     position: relative;
     overflow-x: hidden;
+
+    @media screen and (min-width: 768px) {
+      width: 100%;
+    }
 
     .scroll-button {
       background-color: rgba(0, 0, 0, 0.5);
