--- a/src/app/game-card/game-card.component.html
+++ b/src/app/game-card/game-card.component.html
@@ -1,4 +1,4 @@
-<li class="flex flex-col shadow-xl gap-1 w-48 gamecard">
+<li class="flex flex-col shadow-xl gamecard">
   <div class="relative like-button image">
     <button
       (click)="likeGame(game.id)"
@@ -16,14 +16,14 @@
     </button>
     <a class="items-center flex flex-col" [routerLink]="['/game', game.name]"
       ><img
-        class="w-48 h-64 object-cover object-top rounded"
+        class="object-cover object-top rounded cover"
         src="{{ game.verticalsrc }}"
         alt="image"
       />
     </a>
   </div>
   <div class="flex flex-col gap-1 pt-1 pb-2">
-    <span class="text-zinc-400 text-sm">{{ game.publisher }}</span>
+    <span class="text-zinc-400 text-xs sm:text-sm">{{ game.publisher }}</span>
     <span>{{ game.name }}</span>
     <span class="price">${{ game.price }}</span>
   </div>
