--- a/src/app/game-card/game-card.component.scss
+++ b/src/app/game-card/game-card.component.scss
@@ -1,6 +1,20 @@
 .gamecard {
-  min-height: 320px;
+  min-height: 280px;
   max-height: 380px;
+
+  width: 128px;
+  @media screen and (min-width: 640px) {
+    width: 192px;
+  }
+
+  .cover {
+    width: 128px;
+    height: 171px;
+    @media screen and (min-width: 640px) {
+      width: 192px;
+      height: 256px;
+    }
+  }
 
   &:hover {
     transform: scale(1.005);
@@ -32,5 +46,8 @@
   .price {
     font-size: 0.9rem;
     color: rgb(220, 220, 220);
+  }
+  span {
+    padding: 0 2px;
   }
 }
