--- a/src/app/game/game-pay/game-pay.component.html
+++ b/src/app/game/game-pay/game-pay.component.html
@@ -1,59 +1,63 @@
-<div class="flex flex-col md:flex-row gap-10 justify-center h-svh pt-56">
-  <form [formGroup]="form" class="flex flex-col gap-2 w-96">
-    <strong class="text-xl">Payment Info</strong>
-    <label class="text-lg text-zinc-200" for="payment"
-      >Choose the payment method:</label
-    >
-    <select
-      name="paymentMethod"
-      id="paymentMethod"
-      class="text-black h-8 rounded"
-      formControlName="method"
-      (change)="chosenPaymentMethod(form.get('method')?.value)"
-    >
-      <option value="credit">Credit Card</option>
-      <option value="debit">Debit Card</option>
-    </select>
+<main class="h-svh flex items-center justify-center">
+  <div
+    class="flex flex-col-reverse md:flex-row gap-10 justify-center py-4 px-4 sm:p-0 items-center md:items-center"
+  >
+    <form [formGroup]="form" class="flex flex-col gap-2 w-10/12 sm:w-96">
+      <strong class="text-xl">Payment Info</strong>
+      <label class="text-lg text-zinc-200" for="payment"
+        >Choose the payment method:</label
+      >
+      <select
+        name="paymentMethod"
+        id="paymentMethod"
+        class="text-black h-8 rounded"
+        formControlName="method"
+        (change)="chosenPaymentMethod(form.get('method')?.value)"
+      >
+        <option value="credit">Credit Card</option>
+        <option value="debit">Debit Card</option>
+      </select>
 
-    @if (paymentMethodChosen == "credit") {
-      <pay-credit-form></pay-credit-form>
-    }
-    @if (paymentMethodChosen == "debit") {
-      <pay-debit-form></pay-debit-form>
-    }
+      @if (paymentMethodChosen == "credit") {
+        <pay-credit-form></pay-credit-form>
+      }
+      @if (paymentMethodChosen == "debit") {
+        <pay-debit-form></pay-debit-form>
+      }
 
-    @if (!paymentMethodChosen) {
-      <div class="flex flex-col">
-        <a
-          class="bg-zinc-600 text-white text-lg rounded my-2 py-1 text-center"
-          href="/"
-          >Cancel</a
+      @if (!paymentMethodChosen) {
+        <div class="flex flex-col">
+          <a
+            class="bg-zinc-600 text-white text-lg rounded my-2 py-1 text-center"
+            href="/"
+            >Cancel</a
+          >
+        </div>
+        <span class="text-yellow-400"
+          >No real credit card infos are necessary. This is only a payment
+          simulation!</span
+        >
+      }
+    </form>
+    <div class="flex flex-col gap-5">
+      <div class="flex flex-col gap-2 gameToBuy">
+        <strong class="text-xl pb-1">Purchase Details</strong
+        ><span class="text-zinc-200 py-2">You are buying:</span>
+        <img
+          class="md:h-52 rounded mb-4 image"
+          src="{{ namedGame?.horizontalsrc }}"
+          alt="Game image"
+        />
+
+        <strong class="name text-white">{{ namedGame?.name }}</strong>
+        <span class="text-zinc-300">{{ namedGame?.publisher }}</span>
+      </div>
+      <div class="flex flex-col py-2 gap-1">
+        <strong class="text-lg text-zinc-300">Total:</strong>
+        <span class="text-2xl border-t py-1 border-t-slate-300 text-end"
+          >${{ namedGame?.price }}</span
         >
       </div>
-      <span class="text-yellow-400"
-        >No real credit card infos are necessary. This is just a payment
-        simulation!</span
-      >
-    }
-  </form>
-  <div class="flex flex-col gap-5">
-    <div class="flex flex-col gap-2">
-      <strong class="text-xl pb-1">Purchase Details</strong
-      ><span class="text-zinc-200 py-2">You are buying:</span>
-      <img
-        class="h-52 rounded mb-4"
-        src="{{ namedGame?.horizontalsrc }}"
-        alt=""
-      />
-
-      <strong class="gameToBuy text-white">{{ namedGame?.name }}</strong>
-      <span class="text-zinc-300">{{ namedGame?.publisher }}</span>
-    </div>
-    <div class="flex flex-col py-2 gap-1">
-      <strong class="text-lg text-zinc-300">Total:</strong>
-      <span class="text-2xl border-t py-1 border-t-slate-300"
-        >${{ namedGame?.price }}</span
-      >
     </div>
   </div>
-</div>
+</main>
