--- a/src/app/wishlist/wishlist.component.html
+++ b/src/app/wishlist/wishlist.component.html
@@ -1,4 +1,4 @@
-<ul class="flex flex-wrap gap-3 w-full">
+<ul class="flex flex-wrap gap-3 p-3 w-full" id="wishlist">
   @for (game of games; track $index) {
     <app-game-card [game]="game" (like)="likeGame($index)"> </app-game-card>
   }
