feat: game pay alignment

--- a/src/app/game/game-pay/game-pay.component.scss
+++ b/src/app/game/game-pay/game-pay.component.scss
@@ -1,3 +1,11 @@
+.game-pay {
+  @media screen and (min-width: 640px) {
+    min-height: 473px;
+    height: 473px;
+    max-height: 520px;
+  }
+}
+
 .gameToBuy {
   @media screen and (max-width: 768px) {
     align-items: center;
