--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,5 +1,5 @@
 @if (listedGame) {
-  <main class="flex justify-center px-3" id="listedGame">
+  <main class="flex justify-center" id="listedGame">
     <div id="game">
       <h1 class="text-3xl sm:text-4xl w-full pb-3 md:pb-10">
         {{ namedGame?.name }}
