--- a/src/app/game/game-pay/game-pay.component.html
+++ b/src/app/game/game-pay/game-pay.component.html
@@ -1,8 +1,11 @@
 <main class="h-svh flex items-center justify-center">
   <div
-    class="flex flex-col-reverse md:flex-row gap-10 justify-center py-4 px-4 sm:p-0 items-center md:items-center"
+    class="flex flex-col-reverse md:flex-row gap-10 justify-center py-4 px-4 sm:p-0 items-center md:items-center game-pay"
   >
-    <form [formGroup]="form" class="flex flex-col gap-2 w-10/12 sm:w-96">
+    <form
+      [formGroup]="form"
+      class="flex flex-col sm:h-full gap-2 w-10/12 sm:w-96"
+    >
       <strong class="text-xl">Payment Info</strong>
       <label class="text-lg text-zinc-200" for="payment"
         >Choose the payment method:</label
