--- a/src/app/discover/discover.component.html
+++ b/src/app/discover/discover.component.html
@@ -1,7 +1,7 @@
 <carousel></carousel>
 
 <main class="gamesByCategory" id="discover">
-  <h3 class="text-xl pt-8 pb-4 text-zinc-200">Action Games</h3>
+  <h3 class="text-xl pt-4 md:pt-8 pb-4 text-zinc-200">Action Games</h3>
   <div class="category">
     <button class="scroll-button left" (click)="scrollLeft('actionGamesList')">
       ◀
