--- a/src/app/game-card/game-card.component.scss
+++ b/src/app/game-card/game-card.component.scss
@@ -1,17 +1,21 @@
 .gamecard {
   min-height: 280px;
   max-height: 380px;
-
-  width: 128px;
+  width: 127px;
+  // @media screen and (min-width: 321px) {
+  //   width: 160px;
+  // }
   @media screen and (min-width: 640px) {
-    width: 192px;
+    width: 187px;
   }
 
   .cover {
-    width: 128px;
+    width: 100%;
     height: 171px;
+    // @media screen and (min-width: 321px) {
+    //   height: 220px;
+    // }
     @media screen and (min-width: 640px) {
-      width: 192px;
       height: 256px;
     }
   }
@@ -24,19 +28,21 @@
     }
   }
   .button {
-    visibility: hidden;
-    opacity: 0;
-    transition: 300ms;
-    &:hover {
-      transform: scale(1.1);
-    }
-
-    &.likedGame {
-      opacity: 1;
-      visibility: visible;
-      transform: scale(1.1);
+    @media screen and (min-width: 1025px) {
+      visibility: hidden;
+      opacity: 0;
+      transition: 300ms;
       &:hover {
         transform: scale(1.1);
+      }
+
+      &.likedGame {
+        opacity: 1;
+        visibility: visible;
+        transform: scale(1.1);
+        &:hover {
+          transform: scale(1.1);
+        }
       }
     }
   }
