--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,7 +1,7 @@
 @if (listedGame) {
-  <main class="flex justify-center" id="listedGame">
+  <main class="flex justify-center px-5 md:px-0" id="listedGame">
     <div id="game">
-      <h1 class="text-3xl sm:text-4xl w-full pb-3 md:pb-10">
+      <h1 class="text-3xl sm:text-4xl w-full py-3 md:pb-10">
         {{ namedGame?.name }}
       </h1>
       <div class="md:flex md:justify-between gap-8">
