--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -1,4 +1,4 @@
-@media media and (min-width: 768px) {
+@media screen and (min-width: 768px) {
   #game {
     min-width: 650px;
     max-width: 1400px;
