--- a/src/app/wishlist/wishlist.component.html
+++ b/src/app/wishlist/wishlist.component.html
@@ -1,5 +1,7 @@
-<ul class="flex flex-wrap gap-3 p-3 w-full" id="wishlist">
-  @for (game of games; track $index) {
-    <app-game-card [game]="game" (like)="likeGame($index)"> </app-game-card>
-  }
-</ul>
+<main>
+  <ul class="flex flex-wrap gap-3 py-3 w-full" id="wishlist">
+    @for (game of games; track $index) {
+      <app-game-card [game]="game" (like)="likeGame($index)"> </app-game-card>
+    }
+  </ul>
+</main>
