--- a/src/app/browse/browse.component.html
+++ b/src/app/browse/browse.component.html
@@ -2,7 +2,7 @@
   <h3 class="text-xl py-4 text-zinc-200">All Games</h3>
   <div class="flex w-full">
     <ul
-      class="flex flex-wrap gap-3 w-full pt-4 justify-center sm:justify-between"
+      class="flex flex-wrap gap-3 w-full pt-4 justify-center sm:justify-between lg:justify-start ul"
     >
       @if (gameNotFound) {
         <span
