--- a/src/app/game-card/game-card.component.scss
+++ b/src/app/game-card/game-card.component.scss
@@ -2,21 +2,45 @@
   min-height: 280px;
   max-height: 380px;
   width: 127px;
-  // @media screen and (min-width: 321px) {
-  //   width: 160px;
-  // }
-  @media screen and (min-width: 640px) {
+  @media screen and (min-width: 365px) and (max-width: 689px) {
+    width: 150px;
+  }
+  @media screen and (min-width: 690px) and (max-width: 739px) {
+    width: 187px;
+  }
+  @media screen and (min-width: 740px) and (max-width: 767px) {
+    width: 196px;
+  }
+  @media screen and (min-width: 768px) and (max-width: 839px) {
+    width: 212px;
+  }
+  @media screen and (min-width: 840px) and (max-width: 854px) {
+    width: 222px;
+  }
+  @media screen and (min-width: 855px) {
     width: 187px;
   }
 
   .cover {
     width: 100%;
     height: 171px;
-    // @media screen and (min-width: 321px) {
-    //   height: 220px;
-    // }
-    @media screen and (min-width: 640px) {
+    @media screen and (min-width: 365px) and (max-width: 429px) {
+      height: 200px;
+    }
+    @media screen and (min-width: 690px) and (max-width: 739px) {
       height: 256px;
+    }
+    @media screen and (min-width: 740px) and (max-width: 767px) {
+      height: 278px;
+    }
+    @media screen and (min-width: 768px) and (max-width: 839px) {
+      height: 288px;
+    }
+    @media screen and (min-width: 840px) and (max-width: 854px) {
+      height: 288px;
+    }
+    @media screen and (min-width: 855px) {
+      height: 244px;
     }
   }
 
