--- a/src/app/browse/browse.component.html
+++ b/src/app/browse/browse.component.html
@@ -15,11 +15,4 @@
     </ul>
   </div>
 </div>
-<ngx-spinner
-  bdColor="rgba(0, 0, 0, 0.8)"
-  size="medium"
-  color="#fff"
-  type="ball-spin"
-  [fullScreen]="true"
-  ><p style="color: white">Loading...</p></ngx-spinner
->
+<loading-spinner> </loading-spinner>
