feat: pay and cancel buttons hover

--- a/src/app/game-card/game-card.component.html
+++ b/src/app/game-card/game-card.component.html
@@ -18,7 +18,7 @@
       ><img
         class="object-cover object-top rounded cover"
         src="{{ game.verticalsrc }}"
-        alt="image"
+        alt="game cover"
       />
     </a>
   </div>
