--- a/src/app/game/game-pay/game-pay.component.html
+++ b/src/app/game/game-pay/game-pay.component.html
@@ -2,10 +2,7 @@
   <div
     class="flex flex-col-reverse md:flex-row gap-10 justify-center py-4 px-4 sm:p-0 items-center md:items-center game-pay"
   >
-    <form
-      [formGroup]="form"
-      class="flex flex-col sm:h-full gap-2 w-10/12 sm:w-96"
-    >
+    <form [formGroup]="form" class="flex flex-col gap-2 w-10/12 sm:w-96">
       <strong class="text-xl">Payment Info</strong>
       <label class="text-lg text-zinc-200" for="payment"
         >Choose the payment method:</label
@@ -31,7 +28,7 @@
       @if (!paymentMethodChosen) {
         <div class="flex flex-col">
           <a
-            class="bg-zinc-600 text-white text-lg rounded my-2 py-1 text-center"
+            class="bg-zinc-700 hover:bg-zinc-600 transition text-white text-lg rounded my-2 py-1 text-center"
             href="/"
             >Cancel</a
           >
