--- a/src/app/game/game-pay/pay-debit-form/pay-debit-form.component.html
+++ b/src/app/game/game-pay/pay-debit-form/pay-debit-form.component.html
@@ -26,7 +26,7 @@
   <div class="flex flex-col">
     <a
       [ngClass]="{ disabled: !debitForm.valid }"
-      class="bg-blue-500 text-white text-lg rounded my-2 py-1 text-center"
+      class="bg-blue-500 text-white text-lg rounded my-2 py-1 text-center transition"
       type="submit"
       [routerLink]="['confirmation']"
       routerLinkActive="router-link-active"
@@ -34,7 +34,7 @@
       Confirm Payment
     </a>
     <a
-      class="bg-zinc-600 text-white text-lg rounded my-2 py-1 text-center"
+      class="bg-zinc-700 hover:bg-zinc-600 text-white text-lg rounded my-2 py-1 text-center"
       href="/"
       >Cancel</a
     >
