--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -2,13 +2,13 @@
   <main class="flex justify-center px-5 md:px-0" id="listedGame">
     <div id="game">
       <h1 class="text-3xl sm:text-4xl w-full py-3 md:pb-10">
-        {{ namedGame?.name }}
+        {{ chosenGame?.name }}
       </h1>
       <div class="md:flex md:justify-between gap-8">
         <!-- class="rounded 1/4 md:w-3/5 lg:w-4/6 xl:w-9/12 object-cover" -->
         <img
           class="rounded 1/4 md:w-3/5 lg:w-4/6 xl:w-9/12 object-cover game-cover"
-          src="{{ namedGame?.horizontalsrc }}"
+          src="{{ chosenGame?.horizontalsrc }}"
           alt="Game cover"
         />
         <div
@@ -17,23 +17,23 @@
           <div class="flex flex-col w-full py-2 gap-2">
             <span class="flex justify-between w-full">
               <span class="text-gray-300"> Title: </span>
-              <span class=""> {{ namedGame?.name }}</span></span
+              <span class=""> {{ chosenGame?.name }}</span></span
             >
             <span class="flex justify-between w-full">
               <span class="text-gray-300"> Release Date: </span>
-              <span class=""> {{ namedGame?.releaseDate }}</span></span
+              <span class=""> {{ chosenGame?.releaseDate }}</span></span
             >
             <span class="flex justify-between w-full">
               <span class="text-gray-300"> Genre: </span>
-              <span class=""> {{ namedGame?.genre }}</span></span
+              <span class=""> {{ chosenGame?.genre }}</span></span
             >
             <span class="flex justify-between w-full">
               <span class="text-gray-300"> Publisher: </span>
-              <span>{{ namedGame?.publisher }}</span></span
+              <span>{{ chosenGame?.publisher }}</span></span
             >
             <span class="flex justify-between w-full">
               <span class="text-gray-300"> Developer: </span>
-              <span class="">{{ namedGame?.developer }}</span></span
+              <span class="">{{ chosenGame?.developer }}</span></span
             >
           </div>
           <div class="flex gap-2 flex-col justify-end w-full">
@@ -49,8 +49,13 @@
             </button>
             <button
               class="w-full h-12 rounded bg-gray-900 bg-zinc-700 hover:bg-zinc-600 transition text-lg px-4 wishlist-button"
+              (click)="likeOrDislikeGame()"
             >
-              Add to Wishlist
+              @if (isChosenGameLiked) {
+                Remove from Wishlist
+              } @else {
+                Add to Wishlist
+              }
             </button>
           </div>
         </div>
