--- a/src/app/game/game-pay/game-pay.component.html
+++ b/src/app/game/game-pay/game-pay.component.html
@@ -1,4 +1,4 @@
-<main class="h-svh flex items-center justify-center">
+<main class="flex items-center justify-center">
   <div
     class="flex flex-col-reverse md:flex-row gap-10 justify-center py-4 px-4 sm:p-0 items-center md:items-center game-pay"
   >
