--- a/src/app/wishlist/wishlist.component.scss
+++ b/src/app/wishlist/wishlist.component.scss
@@ -7,6 +7,9 @@ main {
   min-width: 300px;
   max-width: 1440px;
   width: 100%;
+  @media screen and (min-width: 310px) and (max-width: 689px) {
+    justify-content: center;
+  }
   @media screen and (min-width: 768px) {
   }
   &.hidden {
