--- a/src/app/game/game-pay/game-pay.component.html
+++ b/src/app/game/game-pay/game-pay.component.html
@@ -2,30 +2,23 @@
   <div
     class="flex flex-col-reverse md:flex-row gap-10 justify-center py-4 px-4 sm:p-0 items-center md:items-center game-pay"
   >
-    <form [formGroup]="form" class="flex flex-col gap-2 w-10/12 sm:w-96">
-      <strong class="text-xl">Payment Info</strong>
-      <label class="text-lg text-zinc-200" for="payment"
-        >Choose the payment method:</label
-      >
-      <select
-        name="paymentMethod"
-        id="paymentMethod"
-        class="text-black h-8 rounded"
-        formControlName="method"
-        (change)="chosenPaymentMethod(form.get('method')?.value)"
-      >
-        <option value="credit">Credit Card</option>
-        <option value="debit">Debit Card</option>
-      </select>
+    @if (!paymentMethodChosen) {
+      <form [formGroup]="form" class="flex flex-col gap-2 w-10/12 sm:w-96">
+        <h2><strong class="text-xl">Payment Method</strong></h2>
+        <label class="text-lg text-zinc-200" for="payment"
+          >Choose the payment method:</label
+        >
+        <select
+          name="paymentMethod"
+          id="paymentMethod"
+          class="text-black h-8 rounded"
+          formControlName="method"
+          (change)="chosenPaymentMethod(form.get('method')?.value)"
+        >
+          <option value="credit">Credit Card</option>
+          <option value="debit">Debit Card</option>
+        </select>
 
-      @if (paymentMethodChosen == "credit") {
-        <pay-credit-form></pay-credit-form>
-      }
-      @if (paymentMethodChosen == "debit") {
-        <pay-debit-form></pay-debit-form>
-      }
-
-      @if (!paymentMethodChosen) {
         <div class="flex flex-col">
           <a
             class="bg-zinc-700 hover:bg-zinc-600 transition text-white text-lg rounded my-2 py-1 text-center"
@@ -34,11 +27,20 @@
           >
         </div>
         <span class="text-yellow-400"
-          >No real credit card infos are necessary. This is only a payment
-          simulation!</span
+          >No real credit or debit card information is needed, and any other
+          details requested are just to complete the forms for simulation
+          purposes.</span
         >
-      }
-    </form>
+      </form>
+    }
+
+    @if (paymentMethodChosen == "credit") {
+      <pay-credit-form></pay-credit-form>
+    }
+    @if (paymentMethodChosen == "debit") {
+      <pay-debit-form></pay-debit-form>
+    }
+
     <div class="flex flex-col gap-5">
       <div class="flex flex-col gap-2 gameToBuy">
         <strong class="text-xl pb-1">Purchase Details</strong
