--- a/src/app/game/game-pay/pay-credit-form/pay-credit-form.component.scss
+++ b/src/app/game/game-pay/pay-credit-form/pay-credit-form.component.scss
@@ -1,15 +1,5 @@
-.purchaseInfoInput {
-  color: black;
-  height: 2rem;
-  border-radius: 0.25rem;
-  /* background-color: #0d1117; */
-}
-.purchaseInfoLabel {
-  font-size: 1.125rem /* 18px */;
-  line-height: 1.75rem /* 28px */;
-  color: rgb(228 228 231);
-}
-.disabled {
-  pointer-events: none;
-  background-color: rgba(128, 128, 128, 0.333);
+#creditForm {
+  // @media  and min-width {
+  width: 450px;
+  // }
 }
