--- a/src/app/game/game-pay/game-pay.component.html
+++ b/src/app/game/game-pay/game-pay.component.html
@@ -3,7 +3,7 @@
     class="flex flex-col-reverse md:flex-row gap-10 justify-center py-4 px-4 sm:p-0 items-center md:items-center game-pay"
   >
     @if (!paymentMethodChosen) {
-      <form [formGroup]="form" class="flex flex-col gap-2 w-10/12 sm:w-96">
+      <form [formGroup]="form" class="flex flex-col gap-2 pay-form">
         <h2><strong class="text-xl">Payment Method</strong></h2>
         <label class="text-lg text-zinc-200" for="payment"
           >Choose the payment method:</label
