--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -6,7 +6,7 @@
       <a
         [routerLink]="['']"
         routerLinkActive="router-link-active"
-        class="hover:text-white text-gray-400 animated-underline items-center md:flex hidden"
+        class="hover:text-white text-gray-400 animated-underline items-center hidden md:flex"
         >Home
       </a>
       <a
