feat: return to last step reload

--- a/src/app/game/game-pay/pay-credit-form/pay-credit-form.component.html
+++ b/src/app/game/game-pay/pay-credit-form/pay-credit-form.component.html
@@ -31,7 +31,7 @@
     <input class="purchaseInfoInput" formControlName="adress" type="text" />
     <label class="purchaseInfoLabel" for="">City</label>
     <input class="purchaseInfoInput" formControlName="city" type="text" />
-    <label class="purchaseInfoLabel" for="">CEP</label>
+    <label class="purchaseInfoLabel" for="">Postal Code</label>
     <input
       class="purchaseInfoInput"
       formControlName="postalCode"
