--- a/src/app/game/game-pay/pay-debit-form/pay-debit-form.component.html
+++ b/src/app/game/game-pay/pay-debit-form/pay-debit-form.component.html
@@ -75,15 +75,13 @@
     />
 
     <div class="flex flex-col">
-      <a
+      <button
         [ngClass]="{ disabled: !debitForm.valid }"
         class="bg-blue-500 text-white text-lg rounded my-2 py-1 text-center transition"
         type="submit"
-        [routerLink]="['confirmation']"
-        routerLinkActive="router-link-active"
       >
         Confirm Payment
-      </a>
+      </button>
       <button
         class="bg-zinc-700 hover:bg-zinc-600 text-white text-lg rounded my-2 py-1 text-center"
         (click)="returnToLastStep()"
