--- a/src/app/game/game-pay/pay-credit-form/pay-credit-form.component.html
+++ b/src/app/game/game-pay/pay-credit-form/pay-credit-form.component.html
@@ -38,6 +38,18 @@
       type="text"
       appFormatPostalCode
     />
+    @if (
+      creditForm.get("postalCode")?.invalid &&
+      (creditForm.get("postalCode")?.touched ||
+        creditForm.get("postalCode")?.dirty)
+    ) {
+      <div>
+        <span class="text-red-500"
+          >Postal code must include at least 4 characters.</span
+        >
+      </div>
+    }
+
     <div class="flex flex-col">
       <button
         [ngClass]="{ disabled: !arePersonalInfoValid() }"
